	PR fortran/42866 	* omp-low.c (expand_omp_sections): Only use single_pred if 	l2_bb is single_pred_p.

* testsuite/libgomp.fortran/allocatable5.f90: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@156235 138bc75d-0d04-0410-961f-82ee72b054a4